# contentguard-ai

./: .drone.yml  .env.example  .gitignore  .gitlab-ci.yml  AIProviderConfig.md  CLAUDE.md  CONVENTIONS.md  DevelopmentPlan.md  DocumentContradictions.md  ECC_AUDIT_REPORT.md  FeatureSummary.md  PRD.md  README.md  RequirementsDoc.md  UIDesign.md  UIDesignSpec.md  User_Role_Interfaces.md  ai-config-demo.html  docker-compose.local-prod.yml  docker-compose.prod.yml  docker-compose.yml  tasks.md
backend/: .dockerignore  .env.example  BACKEND_TODO.md  Dockerfile  alembic.ini  migrate_task_names.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_tables.py  002_manual_task_upload_fields.py  003_user_org_project_task.py  004_add_audit_logs.py  005_add_messages.py  006_add_platform_rules.py  007_add_brief_agency_attachments.py  008_add_project_platform.py  009_add_creative_rubric_and_learned_rules.py  010_add_message_invite_fields.py  011_add_message_brand_invite_field.py  (+19 more)
backend/app/: __init__.py  celery_app.py  config.py  database.py  logging_config.py  main.py
backend/scripts/: backup.sh  entrypoint.sh  init_db.sh  seed.py  start-dev.sh
backend/tests/: _logto_test_utils.py  conftest.py  test_ai_client.py  test_ai_config_api.py  test_ai_service.py  test_auth_logto_api.py  test_briefs_api.py  test_creator_guidance_board.py  test_dashboard_api.py  test_export_api.py  test_health.py  test_health_integration.py  test_main_recovery.py  test_messages_api.py  test_notification_settings_api.py  test_organizations_api.py  test_profile_api.py  test_profile_company_api.py  test_projects_api.py  test_reports_api.py  test_risk_exception_timeout.py  test_risk_exceptions_api.py  test_rules_api.py  test_script_review_api.py  test_soft_risk.py  test_tasks_api.py  test_upload_api.py  test_video_review_api.py  test_video_review_service.py  test_xhs_api.py  test_xhs_batch_integration.py  test_xhs_batch_service.py  test_xhs_batch_task.py  test_xhs_celery_integration.py  test_xhs_p0_models.py
(+321 files in other folders)
